<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorBackgroundLayoutApp"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_image_03"
        android:src="@drawable/image_background_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/title_bar"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:id="@+id/title_bar_03"
        android:background="@color/colorBackgroundTitleBar"
        android:gravity="center"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundAboveBackgroundLayoutApp"
        android:layout_margin="2dp"
        android:id="@+id/layout_check_boxes"
        android:layout_below="@+id/title_bar_03">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundAboveBackgroundLayoutApp"
            android:layout_margin="2dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/check_box_send_sms"
            android:text="@string/sms_check_box_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp"
            android:id="@+id/check_box_audio_scanner"
            android:layout_below="@+id/check_box_send_sms"
            android:text="@string/audio_check_bex_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp"
            android:id="@+id/check_box_video_scanner"
            android:layout_below="@+id/check_box_audio_scanner"
            android:text="@string/video_check_box_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/check_box_siren"
            android:layout_below="@+id/check_box_video_scanner"
            android:text="@string/siren_check_box_text"/>


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/image_button_go_to_scanner"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:id="@+id/btn_image_view_start_scanner"
            android:layout_below="@+id/check_box_siren"
            android:onClick="btnImageViewStartScanner"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back_button"
            android:layout_below="@+id/check_box_siren"
            android:id="@+id/btn_image_back" />

    </RelativeLayout>

</RelativeLayout>